examples/tests/invalid/optional_invoke.w
let a: num? = 5;

let f = inflight (x: num?) => {
  // do something
};

f(a);
f();
